--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ td {
 	text-align:  center;
 	vertical-align:  middle;
 	font-family:  "Comic Sans MS", cursive, sans-serif;
-	font-size:  0px;
+	font-size:  10px;
 	cursor: pointer;
 }
 
@@ -136,6 +136,14 @@ gInstructions {
     font-family: 'Lato';
     color: white;
     font-size: 22px;
+}
+
+
+scoreboard {
+    color: white;
+    font-family: 'Lato';
+    font-size: 20px;
+    font-weight: 800;
 }
 
 
