--- a/MiniMax/style.css
+++ b/MiniMax/style.css
@@ -14,7 +14,7 @@ table {
 	position: absolute;
 	left: 50%;
 	margin-left: -155px;
-	top: 50px;
+	top: 140px;
 }
 
 table tr:first-child td {
@@ -36,7 +36,7 @@ table tr td:last-child {
 .endgame {
   display: none;
   width: 200px;
-  top: 120px;
+  top: 200px;
   background-color: rgba(205,133,63, 0.8);
   position: absolute;
   left: 50%;
@@ -47,4 +47,11 @@ table tr td:last-child {
   border-radius: 5px;
   color: white;
   font-size: 2em;
+}
+
+scoreboard{
+    color: white;
+    //font-family: 'Lato';
+    font-size: 20px;
+    font-family:sans-serif;
 }
