--- a/MiniMax/style.css
+++ b/MiniMax/style.css
@@ -7,6 +7,7 @@ td {
 	font-family:  "Comic Sans MS", cursive, sans-serif;
 	font-size:  25px;
 	cursor: pointer;
+    font-weight: bold;
 }
 
 table {
