--- a/style.css
+++ b/style.css
@@ -25,6 +25,12 @@ P-button {
     padding: 0.5%;
 }
 
+#logoBottom{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 10%;
+}
 
 /**************LATO FONT*******************/
 
