--- a/PlayerVSPlayer/style.css
+++ b/PlayerVSPlayer/style.css
@@ -66,7 +66,7 @@ button{
 }
 
 /*Customisation for div which appears once the game is won or drawn.*/
-.scoreCard {
+#scoreCard {
   display: none;
   width: 200px;
   top: 285px;
